# SerialDeviceHost

./: CMakeLists.txt  README.md  serialdevicehost-config.cmake  serialdevicehost-version.cmake
examples/: CMakeLists.txt  Device_Enumeration.cpp  LED_Blink.cpp
inc/: MixedDataType.hpp  SerialDevice.hpp  SerialDeviceDiscovery.hpp  SerialDeviceHost.hpp
src/: SerialDeviceDiscovery.cpp  SerialDeviceHost.cpp
